# matmod_2

./: pyproject.toml
assets/: dialog.ui  matmod2.ui
src/: main.py
src/model/: populations_model.py  tablemodel.py
src/view/: matplotlibwidget.py  mplwidget.py  mydialogs.py  phaseportraitwidget.py
