[tool.poetry]
name = "matmod_2"
version = "0.1.0"
description = ""
authors = ["Andrei Arnautov <aleksejtalitej@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
PyQt6 = "^6.4.0"
matplotlib = "^3.6.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
